# owlette

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  build.sh  local.properties  settings.gradle
app/: build.gradle
app/jni/: Android.mk  Application.mk  CMakeLists.txt  DaemonAndroid.cpp  DaemonAndroid.h  i2pd_android.cpp  org_purplei2p_i2pd_I2PD_JNI.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/: i2pd.conf  tunnels.conf
app/src/main/assets/tunnels.d/: IRC-Ilita.conf
app/src/main/cpp/: CMakeLists.txt  DaemonAndroid.cpp  i2pd_android.cpp  native-lib.cpp
app/src/main/cpp/include/: DaemonAndroid.h  main.h  org_purplei2p_i2pd_I2PD_JNI.h
app/src/main/cpp/include/animation/: Animator.h
app/src/main/cpp/include/extra/: vec2.h  vec4.h
app/src/main/cpp/include/i2pd/: DaemonAndroid.h  I2pdManager.h
app/src/main/cpp/include/input/: Dispatcher.h  InputManager.h
app/src/main/cpp/include/storage/: AppStorageManager.h
app/src/main/cpp/include/ui/: EditTextView.h  FontAtlas.h  FontRenderer.h  Font_JNI.h  Renderer.h  ScrollView.h  TextView.h  View.h
app/src/main/cpp/input/: InputManager.cpp
app/src/main/cpp/src/: DaemonAndroid.cpp  main.cpp
app/src/main/cpp/src/animation/: Animator.cpp
app/src/main/cpp/src/i2pd/: DaemonAndroid.cpp  DestinationClient.cpp  I2pdManager.cpp
app/src/main/cpp/src/input/: Dispatcher.cpp
app/src/main/cpp/src/native-lib/: native-lib.cpp
app/src/main/cpp/src/storage/: AppStorageManager.cpp
app/src/main/cpp/src/ui/: EditTextView.cpp  FontGlobals.cpp  FontRenderer.cpp  Font_JNI.cpp  Renderer.cpp  ScrollView.cpp  TextView.cpp  View.cpp
app/src/main/cpp/ui/: EditTextView.cpp  FontGlobals.cpp  FontRenderer.cpp  Font_JNI.cpp  Renderer.cpp  ScrollView.cpp  TextView.cpp  View.cpp
app/src/main/java/org/amistix/owlette/: AppStorageManager.java  DaemonWrapper.java  FontRenderer.java  GLView.java  I2PD_JNI.java  JavaFontAtlas.java  KeyboardTriggerer.java  MainActivity.java  OnMessageReceivedListener.java  RecyclerViewAdapter.java  SharedViewModel.java  SimpleHttpClient.java  SimpleHttpServer.java  TcpClient.java  TunnelsConfig.java
app/src/main/java/org/amistix/owlette/i2pd/: DaemonWrapper.java  I2PD_JNI.java  TunnelsConfig.java
app/src/main/java/org/amistix/owlette/network/: ReceivedMessage.java  TcpClient.java  TcpServer.java
app/src/main/java/org/amistix/owlette/ui/: RecyclerViewAdapter.java  TripleClickListener.java
app/src/main/java/org/amistix/owlette/ui/fragments/: ChannelFragment.java  EditTunnelsFragment.java  HomeFragment.java  QrCodeFragment.java  SettingsFragment.java
app/src/main/jni/: Android.mk  native-lib.cpp
app/src/main/res/color/: track_tint_color.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml  rounded_corners_message.xml
app/src/main/res/layout/: activity_channel.xml  activity_main.xml  fragment_channel.xml  fragment_edit_tunnels.xml  fragment_home.xml  fragment_qrcode.xml  fragment_settings.xml  item_chat_message.xml  item_contact_frame.xml  item_tunnel_frame.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
binary/jni/: Android.mk  Application.mk  build.sh
